--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">E - Cell</string>
     <string name="accesstoken">access_token</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="forgot">Forgot?</string>
+    <string name="sign_in">Sign in</string>
+    <string name="register">Register</string>
 </resources>
