--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">E - Cell</string>
     <string name="accesstoken">access_token</string>
     <string name="username">Username</string>
+    <string name="name">Name</string>
     <string name="password">Password</string>
+    <string name="email">Email</string>
     <string name="forgot">Forgot?</string>
     <string name="sign_in">Sign in</string>
     <string name="register">Register</string>
