--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="log_out">Log Out</string>
     <string name="profile">Profile</string>
     <string name="settings">Settings</string>
-
+    <string name="event">Event</string>
     <string name="title_activity_event">Event</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
