About Us(1): BottomNavi changed, Aim and Vision added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,16 @@
     <string name="es_date"><![CDATA[31 Aug & 1 Sept, 2k19 | NIT Raipur]]></string>
     <string name="post">Post</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--About Us Strings-->
+    <string name="aim_text">Aim</string>
+    <string name="team">Team</string>
+    <string name="contact_us">Contact Us</string>
+
+    <string name="about_us_aim">At ESummit \'19, we aspire to create a melange of eminent speakers who have proved themselves in diverse fields and are at zenith of glory. ESummit \'19 will not be a conclave of innovative minds and epistemic elocutionists, but it will bea place where ideas not only thrive but become the greatest revelation in century.</string>
+    <string name="vision_text">Vision</string>
+
 
 </resources>
