--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="eventdenied">This Event is not approved yet.Sorry for the inconvenicence</string>
 
     <string name="es_intro">The Entrepreneurship Summit is not just and event to provide platform where the students, faculty, investors, participants, speakers and start-ups can interact with each other and gain traction to improve them. We believe in a growth where everyone grows together and hence is this summit. The bright minds shall gain the motivation, resources and the pathway to realise their potential and convert their ideas to innovative start-ups.</string>
-    <string name="about_es_19">ABOUT ES \'19</string>
+    <string name="about_es_19">About ESummit \'19</string>
     <string name="speakers">SPEAKERS</string>
     <string name="es_date"><![CDATA[31 Aug & 1 Sept, 2k19 | NIT Raipur]]></string>
     <string name="post">Post</string>
@@ -47,10 +47,10 @@
     <string name="name_college">National Institute of Technology, GE Road, Raipur [492001]</string>
     <string name="mobile_number">Mobile Number</string>
     <string name="otp">Please verify OTP</string>
-    <string name="wasntabletoload">Oops! data wasn\'t able to load</string>
+    <string name="wasnt_able_to_load">Oops! data wasn\'t able to load</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
-    <string name="verifyotp">Verify OTP</string>
+    <string name="verify_otp">Verify OTP</string>
     <string name="no_internet">No internet Connection.</string>
 
 
