--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,9 +46,10 @@
     <string name="cancel">Cancel</string>
     <string name="verify_otp">Verify OTP</string>
     <string name="no_internet">No internet Connection.</string>
-    
+
     <!--facebook-->
     <string name="facebook_app_id">2421259651476627</string>
     <string name="fb_login_protocol_scheme">fb2421259651476627</string>
+    <string name="update_msg">New Update Available</string>
 
 </resources>
