--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,8 @@
     <string name="facebook_app_id">2421259651476627</string>
     <string name="fb_login_protocol_scheme">fb2421259651476627</string>
     <string name="update_msg">New Update Available</string>
+    <string name="change_number">change number</string>
+    <string name="old_number">Enter old number: </string>
+    <string name="new_number">Enter new number: </string>
 
 </resources>
