--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="eventdenied">This Event is not approved yet.Sorry for the inconvenicence</string>
 
     <string name="es_intro">The Entrepreneurship Summit is not just and event to provide platform where the students, faculty, investors, participants, speakers and start-ups can interact with each other and gain traction to improve them. We believe in a growth where everyone grows together and hence is this summit. The bright minds shall gain the motivation, resources and the pathway to realise their potential and convert their ideas to innovative start-ups.</string>
-    <string name="about_es_19">About ESummit \'19</string>
+    <string name="about_es_19">About E Summit \'19</string>
     <string name="speakers">SPEAKERS</string>
     <string name="es_date"><![CDATA[31 Aug & 1 Sept, 2k19 | NIT Raipur]]></string>
     <string name="post">Post</string>
@@ -54,5 +54,8 @@
     <string name="facebook_app_id">2421259651476627</string>
     <string name="fb_login_protocol_scheme">fb2421259651476627</string>
     <string name="update_msg">New Update Available</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
