--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="log_out">Log Out</string>
     <string name="profile">Profile</string>
     <string name="settings">Settings</string>
-    <string name="event">Event</string>
+    <string name="event_name">Event</string>
     <string name="text_esummit">ESummit</string>
     <string name="color_esummit">#44C7A6</string>
     <string name="text_events">Events</string>
@@ -29,7 +29,7 @@
     <string name="e_summit_19">E SUMMIT \'19</string>
     <string name="eventdenied">This Event is not approved yet.Sorry for the inconvenicence</string>
 
-    <string name="es_intro">The Entrepreneurship Summit is not just and event to provide platform where the students, faculty, investors, participants, speakers and start-ups can interact with each other and gain traction to improve them. We believe in a growth where everyone grows together and hence is this summit. The bright minds shall gain the motivation, resources and the pathway to realise their potential and convert their ideas to innovative start-ups.</string>
+    <string name="es_intro">The Entrepreneurship Summit is not just and name to provide platform where the students, faculty, investors, participants, speakers and start-ups can interact with each other and gain traction to improve them. We believe in a growth where everyone grows together and hence is this summit. The bright minds shall gain the motivation, resources and the pathway to realise their potential and convert their ideas to innovative start-ups.</string>
     <string name="about_es_19">About E Summit \'19</string>
     <string name="speakers">SPEAKERS</string>
     <string name="es_date"><![CDATA[31 Aug & 1 Sept, 2k19 | NIT Raipur]]></string>
