ForgotPass fragment changes. APIs added. LoginActivity minor changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,6 @@
     <string name="esummit_tagline">\"Genesis of Innovation\"</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="agreement">By clicking \'Accept\' you agree to all Terms and Conditions.</string>
+    <string name="back_to_login_screen"><![CDATA[<<Back To Login Screen]]></string>
 
 </resources>
