--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,13 +17,13 @@
     <string name="settings">Settings</string>
     <string name="event">Event</string>
     <string name="text_esummit">ESummit</string>
-    <string name="color_esummit">#44C7A6</string>
+    <string name="color_esummit">#2A2426</string>
     <string name="text_events">Events</string>
-    <string name="color_events">#ED5958</string>
+    <string name="color_events">#F50F46</string>
     <string name="text_bquiz">BQuiz</string>
-    <string name="color_bquiz">#2492C8</string>
+    <string name="color_bquiz">#800064</string>
     <string name="text_spons">Sponsors</string>
-    <string name="color_spons">#F2B531</string>
+    <string name="color_spons">#F39B15</string>
 
     <!--ESUMMIT STRINGS-->
     <string name="e_summit_19">E SUMMIT \'19</string>
