--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,9 +70,13 @@
     <string name="hco">Head Coordinator</string>
     <string name="mng">Manager</string>
     <string name="exc">Executive</string>
+    <string name="tech">Technology</string>
+    <string name="pr">PR and Marketing</string>
+    <string name="doc">Documentation</string>
+    <string name="design">Design</string>
 
     <string name="app_access_token">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJjbGllbnQiOiJhbmRyb2lkIiwib3JnYW5pemF0aW9uIjoiRUNlbGwifQ.H2aaDJuOxK44D2kwRCWwv9s5rzJGCNYKT3thtQqN-hQ</string>
     <string name="resend_otp">Resend OTP ?</string>
-    <string name="about_us_contact">08094966697</string>
+    <string name="about_us_contact">09406220952</string>
     <string name="about_us_website">ecell@nitrr.ac.in</string>
 </resources>
