working bquiz module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,6 @@
     <string name="about_us_contact">09406220952</string>
     <string name="about_us_website">ecell@nitrr.ac.in</string>
     <string name="proceed">PROCEED</string>
-    <string name="placeholder">Lorem ipsum dolor</string>
+    <string name="placeholder">MCQ. If App crashes in middle of Quiz. Dont panic, we know everything.</string>
     <string name="business_quiz">BUSINESS QUIZ</string>
 </resources>
