--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,10 +27,9 @@
 
     <!--ESUMMIT STRINGS-->
     <string name="e_summit_19">E SUMMIT \'19</string>
-    <string name="eventdenied">This Event is not approved yet.Sorry for the inconvenicence</string>
+    <string name="eventdenied">This Event is not approved yet.Sorry for the inconvenience</string>
 
     <string name="es_intro">The Entrepreneurship Summit is not just and name to provide platform where the students, faculty, investors, participants, speakers and start-ups can interact with each other and gain traction to improve them. We believe in a growth where everyone grows together and hence is this summit. The bright minds shall gain the motivation, resources and the pathway to realise their potential and convert their ideas to innovative start-ups.</string>
-    <string name="about_es_19">About E Summit \'19</string>
     <string name="speakers">SPEAKERS</string>
     <string name="es_date"><![CDATA[31 Aug & 1 Sept, 2019 | NIT Raipur]]></string>
     <string name="post">Post</string>
@@ -75,8 +74,16 @@
     <string name="doc">Documentation</string>
     <string name="design">Design</string>
 
+
     <string name="app_access_token">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJjbGllbnQiOiJhbmRyb2lkIiwib3JnYW5pemF0aW9uIjoiRUNlbGwifQ.H2aaDJuOxK44D2kwRCWwv9s5rzJGCNYKT3thtQqN-hQ</string>
     <string name="resend_otp">Resend OTP ?</string>
+
+    <!--About Us-->
+    <string name="about_es_19">About E Summit \'19</string>
     <string name="about_us_contact">09406220952</string>
     <string name="about_us_website">ecell@nitrr.ac.in</string>
+
+    <!--ESummit Dates-->
+    <string name="endDate">01\-09\-19</string>
+    <string name="startDate">31\-08\-19</string>
 </resources>
