--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,6 @@
     <string name="user_registered">Registered</string>
 
     <string name="proceed">PROCEED</string>
-    <string name="placeholder">MCQ. If App crashes in middle of Quiz. Dont panic, we know everything.</string>
+    <string name="placeholder">MCQ. If App crashes in middle of Quiz. Dont panic, we know everything. Use time wisely.</string>
     <string name="business_quiz">BUSINESS QUIZ</string>
 </resources>
