--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="user_registered">Registered</string>
 
     <string name="proceed">PROCEED</string>
+    <string name="leaderboard">LeaderBoard</string>
     <string name="placeholder">MCQ. Quick Answer, more points.</string>
     <string name="business_quiz">BUSINESS QUIZ</string>
 
