--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="contact_us">Contact Us</string>
     <string name="about_us_aim">At ESummit \'19, we aspire to create a melange of eminent speakers who have proved themselves in diverse fields and are at zenith of glory. ESummit \'19 will not be a conclave of innovative minds and epistemic elocutionists, but it will bea place where ideas not only thrive but become the greatest revelation in century.</string>
     <string name="vision_text">Vision</string>
-    <string name="name_college">National Institute of Technology, GE Road, Raipur [492001]</string>
+    <string name="name_college">National Institute of Technology, GE Road, Raipur</string>
     <string name="mobile_number">Mobile Number</string>
     <string name="otp_verification">OTP Verification</string>
     <string name="wasnt_able_to_load">Oops! data wasn\'t able to load</string>
@@ -99,7 +99,7 @@
     <string name="error_last_name">Last Name should not contain digits or empty field.</string>
     <string name="error_email">Invalid Email Address.</string>
     <string name="error_first_name">First Name should not contain digits or empty field.</string>
-    <string name="error_common">Empty fields not allowed.</string>
+    <string name="error_common">Required Field.</string>
     <string name="error_pass">Password\'s length should at least be eight.</string>
     <string name="error_mobile">Enter a valid mobile number.</string>
 
