--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:https="http://schemas.android.com/apk/res-auto">
     <string name="app_name">E - Cell</string>
     <string name="access_token">accessToken</string>
     <string name="name">Name</string>
@@ -63,7 +63,7 @@
     <string name="old_number">Old Number</string>
     <string name="new_number">New Number</string>
 
-    <string name="esummit_tagline">Genesis of Innovation</string>
+    <string name="esummit_tagline">The Genesis of Innovation</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="agreement">By clicking \'Accept\' you agree to all Terms and Conditions.</string>
     <string name="back_to_login_screen">Back To Login Screen</string>
@@ -111,6 +111,8 @@
 
     <string name="agree_terms_privacy">By continuing, you agree to our &lt;a href=https://ecell.nitrr.ac.in/terms>Terms and Conditions&lt;/a> and &lt;a href=https://ecell.nitrr.ac.in/policy>Privacy Policy&lt;/a></string>
     <string name="prev_sponsors">Previous Sponsors</string>
+    <string name="read_more"><![CDATA[<a href=https://ecell.nitrr.ac.in/terms>Click here for further details…</a>]]></string>
+    <string name="visit_website"><a>Visit Website</a></string>
 
     <!--Event Data-->
 
